test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
